--- a/details.html
+++ b/details.html
@@ -3,114 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Senior Tech Support - Details</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #0073e6;
-            color: white;
-            padding: 20px;
-            font-size: 24px;
-            font-weight: bold;
-            text-align: center;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            max-width: 800px;
-            width: 90%;
-            margin: 20px auto;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            text-align: left;
-        }
-        h2 {
-            color: #0073e6;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-            font-size: 18px;
-            text-align: left;
-            margin: 0 auto;
-            max-width: 90%;
-            padding-left: 20px; /* Adjusted for mobile */
-        }
-        ul li {
-            margin-bottom: 10px;
-        }
-        ul li::before {
-            content: '✅ ';
-        }
-        .contact {
-            margin-top: 20px;
-            font-size: 18px;
-            text-align: center;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 15px;
-                max-width: 95%;
-            }
-            header {
-                font-size: 20px;
-                padding: 15px;
-            }
-            ul {
-                font-size: 16px;
-                padding-left: 10px; /* Reduces indent */
-            }
-            .contact {
-                font-size: 16px;
-            }
-        }
-    </style>
+    <title>carlek-tech details</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
     <div class="container">
-        <header>Tech Support for Seniors and Caregivers <br><br>More About Me and my Services</header>
-        <p><em>Providing comprehensive and personalized tech support for seniors and caregivers.</em></p>
+        <header>Tech Support for Seniors of All Ages<br><br>More About Me and my Services</header>
+        <p><em></em></p>
 
-        <p>I am a software engineer in my 60s who started my career at IBM Toronto. I have an Undergraduate degree from University of Manitoba and a Masters degree from University of Waterloo. I worked for 14 years in Silicon Valley and now have returned to Canada and am starting a small business to help seniors in the GTA. I am friendly and kind, and nothing pleases me more than helping others to be comfortable, connected, and confident with technology !
-             </p>
-        <h2>Examples of Services</h2>
+        <p>I am a software engineer in my 60s with degrees from the University of Manitoba and the University of Waterloo. I started my career at IBM Toronto. After worked at smaller companies as team lead and trainer in Vancouver and San Francisco for 14 years I have returned to the great country of Canada! I am friendly and kind - nothing pleases me more than helping others to be comfortable, connected, and confident with technology !</p>
         <ul>
-            <li><strong>Person to Person Support</strong> - Hands-on assistance at your home.</li>
-            <li><strong>Remote Assistance</strong> - Phone or video call from the comfort of your home.</li>
+            <li><strong>Person to Person Support</strong> - When needed to understand and solve your issue.</li>
+            <li><strong>Remote Assistance</strong> - Phone or video calls for your convenience.</li>
             <li><strong>Setup and Training</strong> - General help so you get the best use of your devices.</li>
             <li><strong>Documents, Pictures, Video</strong> - Help you stay connected, share, and communicate.</li>
-            <li><strong>Technical Support</strong> - Advice on new purchases, installs, upgrades, memory, batteries.</li>
-            <li><strong>Internet Safety</strong> - Vital advice on how stay safe online and avoid scams.</li>
+            <li><strong>Technical Support</strong> - General problems, installs, upgrades, advice on new purchases.</li>
+            <li><strong>Internet Safety</strong> - Vital advice on how to stay safe online and avoid scams.</li>
             <li><strong>Anything Else?</strong> - Give me a call and I will do my best to help !!! </li>
         </ul>
 
         <h2>Pricing</h2>
-        <p>Contact me for my reasonable and personalized quotes.</p>
+        <ul class="rates">
 
-        <!-- <h2>Testimonials</h2>
+        <li>Free calls for consulations, hourly work 50$, we can discuss monthly rates if needed.</li>
+        </ul>
+        
+
+        <h2>Testimonial</h2>
         <blockquote>
-            <p>"I was struggling with my new laptop, but the patient and clear guidance I received made all the difference. Highly recommend!"</p>
-            <footer>- Jane D.</footer>
+            <p>"I have known you for a very long time as a friend as well as a fabulous teacher when I have needed assistance with some computer work. Most of us older people try to keep up with the younger generation where computers are concerned. However, you, Carl offer excellent knowledge, with patience and understanding. I always know you will answer my desperate requests for help as quickly as possible!" - Ann M.</p>
         </blockquote>
-        <blockquote>
-            <p>"As a caregiver, I needed help setting up video calls for my mom. The support was professional and tailored to our needs."</p>
-            <footer>- John S.</footer>
-        </blockquote> -->
-
+        <br>
         <div class="contact">
             <p><strong>Contact Carl:</strong></p>
             <p>📞 Call/Text: 548-564-0574</p>
             <p>📧 Email: carlektech@gmail.com</p>
             <p>🌐 Website: <a href="https://carlek-tech.github.io">carlek-tech.github.io</a></p>
-            <p>🔗 <a href="index.html">Back to Home</a></p> 
+            <p>🔗 <a href="index.html">🏡</a></p> 
         </div>
     </div>
 
