--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="container">
         <header>Tech Support for Seniors of All Ages<br><br>Personalized, Professional & Affordable</header>
         <p><strong><em>Helping You - One Click at a Time</em></strong></p>
-        <p>Do you or a loved one ever struggle with computers, laptops, or other tech gadgets? The challenges that seniors and caregivers face are increasing more and more in today's digital world. I understand this and am here to help: patiently, professionally, and affordably.</p>
+        <p>Do you or a loved one ever struggle with computers, laptops, tablets, websites, and apps? The challenges that seniors and caregivers face are increasing more and more in today's digital world. I understand this and am here to help: patiently, professionally, and affordably.</p>
         
         <h2>What I Offer:</h2>
         <ul>
             <li><strong>In-Person, Live Video, or Phone Support</strong></li>
-            <li><strong>Notebook, Tablet, Desktop Assistance</strong></li>
+            <li><strong>Laptop, Tablet, Desktop Assistance</strong></li>
             <li><strong>Education & Guidance</strong></li>
             <li><strong>Caregiver-Friendly Support</strong></li>
             <li><strong>Affordable & Flexible Rates </strong>
