--- a/details.html
+++ b/details.html
@@ -12,7 +12,7 @@
         <header>Tech Support for Seniors of All Ages<br><br>More About Me and my Services</header>
         <p><em></em></p>
 
-        <p>I am a software engineer in my 60s with degrees from the University of Manitoba and the University of Waterloo. I started my career at IBM Toronto. After worked at smaller companies as team lead and trainer in Vancouver and San Francisco for 14 years I have returned to the great country of Canada! I am friendly and kind - nothing pleases me more than helping others to be comfortable, connected, and confident with technology !</p>
+        <p>I am a software engineer in my 60s with degrees from the University of Manitoba and the University of Waterloo. I started my career at IBM Toronto. After working at smaller companies as team leader and trainer in Vancouver and San Francisco for 14 years I have returned to the great country of Canada! I am friendly and kind - nothing pleases me more than helping others to be comfortable, connected, and confident with technology !</p>
         <ul>
             <li><strong>Person to Person Support</strong> - When needed to understand and solve your issue.</li>
             <li><strong>Remote Assistance</strong> - Phone or video calls for your convenience.</li>
