--- a/details.html
+++ b/details.html
@@ -39,7 +39,7 @@
             <p><strong>Contact Carl:</strong></p>
             <p>📞 Call/Text: 548-564-0574</p>
             <p>📧 Email: carlektech@gmail.com</p>
-            <p>🌐 Website: <a href="https://carlek-tech.github.io">carlek-tech.github.io</a></p>
+            <p>🌐 Website: <a href="https://carlek-tech.carrd.co/">carlek-tech.carrd.co</a></p>
             <p>🔗 <a href="index.html">🏡</a></p> 
         </div>
     </div>
